@@ -1,5 +1,7 @@
 === SVN
 
+* Fixed drop_index in mysql adapter (#103).
+
 * Added ALTER TABLE specs for postgres, sqlite and mysql adapters. Added custom alter_table behavior for sqlite and mysql adapters (#101, #102).
 
 * Added direct Database API for altering tables.
